k8s-playground/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5678
